       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from my experiences with the former kwm, which I
originally based on David Hogan's 9wm (a smart and small windowmanager
written in plain C).


Current is 0.14.1 

In 0.14:
-------
patchlevel 1:
        - fixed event passing: release no longer repeated to application

In 0.13:
--------
patchlevel 9:
        - fixed initial focus handling (non decorated windows where sometimes broken)
        - fixed occasional crashbugs when internal window close (such as minicli)
        - fixes for stays-on-top

patchlevel 8:
        - delayed internal event handling fix (kwm sometimes lost the 
           mouse on opaque resize)
        - minicli in-memory history has now a maximum limit (CT)
        - added handling for the KWM::staysOnTop property. The internal
           functionality was there already, just the activation was missing.
           Cannot break any existing code.

patchlevel 7:
        - small bugfixes
        - improved (faster) configure request handling
        - some support for windowgroups
        - fixed unClutter/cascade with standalone menubars

patchlevel 6:
        - dock window handling improved for restart
        - new CheckRaise option for focus follows mouse policies 
        - slightly improved the titlebar animation (Thorsten Scheuermann)


patchlevel 5:
        - animation of shaded windows improved
         - "restart" command in addition to "go:" and "configure"
         - sensitive handling of maximized windows when the window 
            region changes.

patchlevel 4:
        - improved handling for floating menubars

patchlevel 3:
        - fixed semantics with FocusFollowsMouse and AutoRaise:
               There are now two kwmrc properties:
                      AutoRaise=on/off
                      AutoRaiseInterval=0...x