@@ -132,7 +132,7 @@ Ktask::Ktask( QWidget *parent, const char *name, WFlags f)
 
 
 void Ktask::prepareToShow(QStrList* strlist, int active){
-  int w = 360;
+  int w = QApplication::desktop()->width()/3;
   int h = 0;
 
   QFont fnt = kapp->generalFont;
@@ -169,7 +169,7 @@ void Ktask::prepareToShow(QStrList* strlist, int active){
   label->move(w/2-label->width()/2, 15);
   h = label->geometry().bottom() + 15;
 
-  listbox->setGeometry(5, h, w-10, 200);
+  listbox->setGeometry(5, h, w-10, QApplication::desktop()->height()/2);
   h = listbox->geometry().bottom() + 10;
 
   button->setGeometry((w/2-w/8-w/4)/2,
